# nh_website

./: .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  .sqlfluffignore  LICENSE  README.md  flask_nh_site.py  notes  pyproject.toml  refresh_data.sh  requirements.txt  serve_top_episodes.py  test_nh_site.py  top_episodes.md
cron/: imdb_load.py  refresh_imdb_data.sh
sql/: add-indexes-and-ranks.sql  get-basic-show-info.sql  search-show-names-in-full-text-index.sql
sql/books/: get_categories_for_top_books.sql  get_top_books_for_category.sql
sql/episodes/: add-indexes-and-ranks.sql  add-indexes.sql  create-tables.sql  get-basic-show-info.sql  get-powerful-eps.sql  get_seasons_summary.sql  search-show-names-in-full-text-index.sql
sql/topcat/: get-posts-for-hash.sql  get-top-posts-for-flask.sql
static/: fixAudio.js  script.js  style.css  style_mobile.css
templates/: base.html  books.html  episodes.html  index.html  permalink.html  top-post.html
