[project]
name = "nh-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosql>=13.0",
    "csvs-to-sqlite>=1.3",
    "flask>=2.0.3",
    "flask-mobility>=1.1.0",
    "flask-restful>=0.3.10",
    "flask-wtf>=1.2.2",
    "pytest>=8.3.4",
    "selenium>=4.27.1",
    "sqlfluff>=3.3.0",
]

[tool.pytest.ini_options]
addopts = "-v"

